--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -10,14 +10,13 @@ body:
     attributes:
       value: |
         Thanks for taking the time to fill out this bug report!
-  - type: input
-    id: contact
+  - type: dropdown
+    id: assignee
     attributes:
-      label: Contact Details
-      description: How can we get in touch with you if we need more info?
-      placeholder: ex. email@example.com
-    validations:
-      required: false
+      label: Assignee
+      description: Who should be assigned to this issue?
+      options:
+        - jean079
   - type: textarea
     id: what-happened
     attributes:
@@ -28,37 +27,20 @@ body:
     validations:
       required: true
   - type: dropdown
-    id: version
+    id: Importance
     attributes:
-      label: Version
-      description: What version of our software are you running?
+      label: Importance
+      description: How critical is the issue?
       options:
-        - 1.0.2 (Default)
-        - 1.0.3 (Edge)
+        - critical
+        - important
+        - normal
       default: 0
     validations:
       required: true
-  - type: dropdown
-    id: browsers
-    attributes:
-      label: What browsers are you seeing the problem on?
-      multiple: true
-      options:
-        - Firefox
-        - Chrome
-        - Safari
-        - Microsoft Edge
   - type: textarea
-    id: logs
+    id: User info
     attributes:
-      label: Relevant log output
-      description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
+      label: User info
+      description: provide user info if applicable
       render: shell
-  - type: checkboxes
-    id: terms
-    attributes:
-      label: Code of Conduct
-      description: By submitting this issue, you agree to follow our [Code of Conduct](https://example.com)
-      options:
-        - label: I agree to follow this project's Code of Conduct
-          required: true
