--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -16,7 +16,7 @@ body:
       options:
         - jean079
   - type: textarea
-    id: what-happened
+    id: whatHappened
     attributes:
       label: What happened?
       description: Also tell us, what did you expect to happen?
