--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -13,7 +13,7 @@ body:
   - type: textarea
     id: problem-statement
     attributes:
-      label: # Problem Statement
+      title: Problem Statement
       description: Please describe the problem or issue you encountered.
       placeholder: Describe the problem in detail.
     validations:
