--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -29,5 +29,6 @@ body:
         - Critical
         - Important
         - Not Urgent
+         placeholder: select urgency
     validations:
       required: true
