--- a/.github/ISSUE_TEMPLATE/Feature.yaml
+++ b/.github/ISSUE_TEMPLATE/Feature.yaml
@@ -1,65 +1,42 @@
-name: Bug Reportddd
-description: File a bug reportdd
-title: "[Bug]dd: "
-labels: ["bug", "triage"]
-projects: ["octo-org/1", "octo-org/44"]
-assignees:
-  - octocat
+name: Bug Report
+description: Report a bug or problem
+labels: ["bug"]
 body:
   - type: markdown
     attributes:
       value: |
-        Thanks for taking the time to fill out this bug report!
-  - type: input
-    id: contact
-    attributes:
-      label: Contact Details
-      description: How can we get in touch with you if we need more info?
-      placeholder: ex. email@example.com
-    validations:
-      required: false
+        Thank you for taking the time to report this issue!
   - type: textarea
-    id: what-happened
+    id: problem-statement
     attributes:
-      label: What happened?
-      description: Also tell us, what did you expect to happen?
-      placeholder: Tell us what you see!
-      value: "A bug happened!"
+      label: Problem Statement
+      description: Please describe the problem or issue you encountered.
+      placeholder: Describe the problem in detail.
     validations:
       required: true
-  - type: dropdown
-    id: version
+  - type: textarea
+    id: info
     attributes:
-      label: Version
-      description: What version of our software are you running?
+      label: Extra information
+      description: If applicable provide screenshot, username or email address.
+      placeholder: Enter Extra information (optional).
+ - type: input
+  id: contact
+  attributes:
+    label: Contact Details
+    description: How can we get in touch with you if we need more info?
+    placeholder: ex. email@example.com
+  validations:
+    required: false
+  - type: dropdown
+    id: urgency
+    attributes:
+      label: Urgency
+      description: How urgent is the problem?
       options:
-        - 1.0.2 (Default)
-        - 1.0.3 (Edge)
-      default: 0
+        - Critical
+        - Important
+        - Not Urgent
     validations:
       required: true
-  - type: dropdown
-    id: browsers
-    attributes:
-      label: What browsers are you seeing the problem on?
-      multiple: true
-      options:
-        - Firefox
-        - Chrome
-        - Safari
-        - Microsoft Edge
-  - type: textarea
-    id: logs
-    attributes:
-      label: Relevant log output
-      description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
-      render: shell
-  - type: checkboxes
-    id: terms
-    attributes:
-      label: Code of Conduct
-      description: By submitting this issue, you agree to follow our [Code of Conduct](https://example.com)
-      options:
-        - label: I agree to follow this project's Code of Conduct
-          required: true
 
