--- a/.github/ISSUE_TEMPLATE/Feature.yaml
+++ b/.github/ISSUE_TEMPLATE/Feature.yaml
@@ -1,6 +1,6 @@
-name: Bug Report
-description: Report a bug or problem
-labels: ["bug"]
+name: Feature
+description: Add a Feature to the project
+labels: ["enhancement"]
 body:
   - type: markdown
     attributes:
@@ -20,14 +20,6 @@ body:
       label: Extra information
       description: If applicable provide screenshot, username or email address.
       placeholder: Enter Extra information (optional).
- - type: input
-  id: contact
-  attributes:
-    label: Contact Details
-    description: How can we get in touch with you if we need more info?
-    placeholder: ex. email@example.com
-  validations:
-    required: false
   - type: dropdown
     id: urgency
     attributes:
@@ -39,4 +31,3 @@ body:
         - Not Urgent
     validations:
       required: true
-
