--- a/.github/ISSUE_TEMPLATE/Feature.yaml
+++ b/.github/ISSUE_TEMPLATE/Feature.yaml
@@ -5,7 +5,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thank you for taking the time to this feature!
+        Thank you for taking the time to add this feature!
   - type: textarea
     id: feature-statement
     attributes:
