--- a/.github/ISSUE_TEMPLATE/Feature.yaml
+++ b/.github/ISSUE_TEMPLATE/Feature.yaml
@@ -9,7 +9,7 @@ body:
   - type: textarea
     id: feature-statement
     attributes:
-      label: feature Description
+      label: Feature Description
       description: Please describe the feature.
       placeholder: Describe the feature in detail.
     validations:
