--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,8 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Extract PR Description
-      run: echo "PR Description: ${{ github.event.pull_request.body }}" >> pr_description.txt
+      run: |
+        echo "PR Description: ${{ github.event.pull_request.body }}" >> pr_description.txt
 
     - name: Send Email
       env:
