--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,14 +25,11 @@ jobs:
         SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
         TO_EMAIL: ${{ secrets.TO_EMAIL }}
       run: |
-        cat pr_description.txt | mailx -v \
-          -r $SMTP_USERNAME \
-          -s "PR Description" \
-          -S smtp="$SMTP_SERVER:$SMTP_PORT" \
-          -S smtp-use-starttls \
-          -S smtp-auth=login \
-          -S smtp-auth-user="$SMTP_USERNAME" \
-          -S smtp-auth-password="$SMTP_PASSWORD" \
-          -S ssl-verify=ignore \
-          $TO_EMAIL
-       
+        echo "Sending email..."
+        # Replace the following with your email sending code or script.
+        # You can use a tool like 'sendmail' or 'mailx' to send an email with the PR description.
+        # Example (replace with your own email command):
+        echo "PR Description: ${{ github.event.pull_request.body }}" | mail -s "Pull Request Description" $TO_EMAIL
+
+        # Optionally, you can remove the pr_description.txt file after sending the email.
+        # rm pr_description.txt
