--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,21 +46,21 @@ jobs:
         # Optional plain body:
         body: Build job successfully!
         # Optional HTML body read from file:
-        cc: kyloren@example.com,leia@example.com
+        # cc: kyloren@example.com,leia@example.com
         # Optional blind carbon copy recipients:
-        bcc: r2d2@example.com,hansolo@example.com
+        # bcc: r2d2@example.com,hansolo@example.com
         # Optional recipient of the email response:
-        reply_to: luke@example.com
+        # reply_to: luke@example.com
         # Optional Message ID this message is replying to:
-        in_reply_to: <random-luke@example.com>
+        # in_reply_to: <random-luke@example.com>
         # Optional unsigned/invalid certificates allowance:
-        ignore_cert: true
+        # ignore_cert: false
         # Optional converting Markdown to HTML (set content_type to text/html too):
-        convert_markdown: true
+        # convert_markdown: true
         # Optional attachments:
-        attachments: attachments.zip,git.diff,./dist/static/*.js
+        # attachments: attachments.zip,git.diff,./dist/static/*.js
         # Optional priority: 'high', 'normal' (default) or 'low'
-        priority: low   
+        # priority: low   
         
         
 
