--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   send_email:
-    runs-on: ubuntu:22.04
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
@@ -17,56 +17,21 @@ jobs:
       run: |
         echo "PR Description: ${{ github.event.pull_request.body }}" >> pr_description.txt
 
-
-    - name: Send mail
-      uses: dawidd6/action-send-mail@v3
+    - name: Send some mail
+      uses: wadeww/send-email-action@master
       with:
-        # Specify connection via URL (replaces server_address, server_port, secure,
-        # username and password)
-        #
-        # Format:
-        #
-        #  * smtp://user:password@server:port
-        #  * smtp+starttls://user:password@server:port
-        server_address: ${{ secrets.SMTP_SERVER }}
-        # Server port, default 25:
-        server_port: ${{ secrets.SMTP_PORT }}
-        # Optional whether this connection use TLS (default is true if server_port is 465)
-        secure: true
-        # Optional (recommended) mail server username:
+        server_address:  ${{ secrets.SMTP_SERVER }}
+        port: ${{ secrets.SMTP_PORT }}
         username: ${{ secrets.SMTP_USERNAME }}
-        # Optional (recommended) mail server password:
         password: ${{ secrets.SMTP_PASSWORD }}
-        # Required mail subject:
-        subject: Github Actions job result
-        # Required recipients' addresses:
-        to:  ${{ secrets.TO_EMAIL }}
-        # Required sender full name (address can be skipped):
-        from: Luke Skywalker # <user@example.com>
-        # Optional plain body:
-        body: Build job successfully!
-        # Optional HTML body read from file:
-        # cc: kyloren@example.com,leia@example.com
-        # Optional blind carbon copy recipients:
-        # bcc: r2d2@example.com,hansolo@example.com
-        # Optional recipient of the email response:
-        # reply_to: luke@example.com
-        # Optional Message ID this message is replying to:
-        # in_reply_to: <random-luke@example.com>
-        # Optional unsigned/invalid certificates allowance:
-        # ignore_cert: false
-        # Optional converting Markdown to HTML (set content_type to text/html too):
-        # convert_markdown: true
-        # Optional attachments:
-        # attachments: attachments.zip,git.diff,./dist/static/*.js
-        # Optional priority: 'high', 'normal' (default) or 'low'
-        # priority: low   
-        
-        
+        subject: Workflow finished
+        body: Job completed 
+        to: jean574@gmail.com
+        from: Me
 
 
 
-    # - name: Send Email
+         # - name: Send Email
     #   uses: softprops/action-email@v3
     #   with:
     #     server: ${{ secrets.SMTP_SERVER }}
