--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
         username: ${{ secrets.SMTP_USERNAME }}
         password: ${{ secrets.SMTP_PASSWORD }}
         subject: Workflow finished
-        body: Job completed 
-        to: jean574@gmail.com
+        body: Job completed
+        to: vissie574@gmail.com
         from: Me
 
 
