--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -3,7 +3,7 @@ name: Test Tag Trigger
 on:
   push:
     tags:
-    - 'v*'  # Match any tags starting with 'v' (e.g., v1.0.0)
+    - 'v*'  # Match any tags starting with 'v' (e.g., v1.0.0) test test test
     branches:
     - main
 
