--- a/.github/workflows/artifacttesting.yml
+++ b/.github/workflows/artifacttesting.yml
@@ -11,6 +11,6 @@ jobs:
       - name: Archive production artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: dist-without-markdown
+          name: release notes
           path: |
             test2
